# context

./: .gitignore  README.md  Rebuild.txt  build-msi.ps1  build-release.ps1  download-fonts.ps1  file-list.txt  package-lock.json  package.json  Сборка установщика.txt
.github/workflows/: release.yml
docs/: index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: README.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
wixext-ui/: .signature.p7s  WixToolset.UI.wixext.nuspec  [Content_Types].xml
wixext-ui/_rels/: .rels
