[package]
name    = "context"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "context"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                       = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell          = "2"
tauri-plugin-single-instance = "2"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
base64                      = "0.22"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
